syntax = "proto3";

package payment.v1;

option go_package = "github.com/kevin07696/payment-service/proto/payment/v1;paymentv1";

import "google/protobuf/timestamp.proto";

// ============================================
// BROWSER POST FLOW (POS Option 2)
// ============================================

// BrowserPostService handles browser-based payment flow for POS
// Payment Service = Gateway Integration ONLY
service BrowserPostService {
  // CreateBrowserPostForm generates EPX form data for browser redirect
  rpc CreateBrowserPostForm(CreateBrowserPostFormRequest)
    returns (BrowserPostFormData);

  // Refund a completed transaction
  rpc Refund(RefundRequest)
    returns (RefundResponse);

  // Void a transaction
  rpc Void(VoidRequest)
    returns (VoidResponse);

  // Get transaction details
  rpc GetTransaction(GetTransactionRequest)
    returns (Transaction);

  // List transactions (query by external reference)
  rpc ListTransactions(ListTransactionsRequest)
    returns (ListTransactionsResponse);
}

// CreateBrowserPostFormRequest initiates browser post payment flow
// Creates a PENDING transaction immediately for audit trail
message CreateBrowserPostFormRequest {
  string agent_id = 1; // Multi-tenant: which merchant
  string amount = 2; // Decimal as string (e.g., "29.99")
  string currency = 3; // ISO 4217 code (e.g., "USD")
  string idempotency_key = 4; // Used as EPX TRAN_NBR for deduplication
  string return_url = 5; // Where to redirect after callback (e.g., "https://pos.example.com/payment-complete")
}

// BrowserPostFormData contains form fields for EPX redirect
// Includes transaction IDs created in PENDING state
message BrowserPostFormData {
  string transaction_id = 1; // Transaction UUID (created in PENDING state)
  string group_id = 2; // Group UUID for linking related transactions
  string epx_endpoint = 3; // EPX server POST URL
  string tac_token = 4; // Transaction authorization code
  map<string, string> hidden_fields = 5; // Additional form fields (amount, etc.)
}

// RefundRequest refunds a completed transaction
message RefundRequest {
  string transaction_id = 1;
  string amount = 2; // Optional: partial refund amount
  string reason = 3;
  string idempotency_key = 4;
}

// RefundResponse contains refund transaction details
message RefundResponse {
  Transaction refund_transaction = 1;
}

// VoidRequest voids a transaction
message VoidRequest {
  string transaction_id = 1;
  string idempotency_key = 2;
}

// VoidResponse contains void transaction details
message VoidResponse {
  Transaction void_transaction = 1;
}

// GetTransactionRequest retrieves a transaction
message GetTransactionRequest {
  string transaction_id = 1;
}

// ListTransactionsRequest lists transactions
message ListTransactionsRequest {
  string agent_id = 1; // Filter by merchant
  google.protobuf.Timestamp start_date = 2; // Optional: date range filter
  google.protobuf.Timestamp end_date = 3;
  int32 page_size = 4; // Default: 100
  string page_token = 5; // Pagination token
}

// ListTransactionsResponse contains transaction list
message ListTransactionsResponse {
  repeated Transaction transactions = 1;
  string next_page_token = 2; // For pagination
}

// Note: Transaction message is defined in payment.proto (same package)
// All Transaction references in this file use that definition
